--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "dev": "webpack serve --mode development",
         "build": "webpack --mode production",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "storybook": "storybook dev -p 6006",
+        "storybook:build": "storybook build"
     },
     "keywords": [],
     "author": "",
